--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
 bleak==0.11.0
-HAP-python[QRCode]==3.4.1
-git+https://github.com/benknight/hue-python-rgb-converter.git@f73a4ec#egg=rgbxy
+git+https://github.com/benknight/hue-python-rgb-converter.git
